use fixed-point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,37 +1,37 @@
 add_library(my_lua_lib STATIC
-        lapi.cpp
-        lauxlib.cpp
-        lbaselib.cpp
-        lbitlib.cpp
-        lcode.cpp
-        lcorolib.cpp
-        lctype.cpp
-        ldblib.cpp
-        ldebug.cpp
-        ldo.cpp
-        ldump.cpp
-        lfunc.cpp
-        lgc.cpp
-        linit.cpp
-        liolib.cpp
-        llex.cpp
-        lmem.cpp
-        loadlib.cpp
-        lobject.cpp
-        lopcodes.cpp
-        loslib.cpp
-        lparser.cpp
-        lpico8lib.cpp
-        lstate.cpp
-        lstring.cpp
-        lstrlib.cpp
-        ltable.cpp
-        ltablib.cpp
-        ltests.cpp
-        ltm.cpp
-        lundump.cpp
-        lvm.cpp
-        lzio.cpp
+        lapi.c
+        lauxlib.c
+        lbaselib.c
+        lbitlib.c
+        lcode.c
+        lcorolib.c
+        lctype.c
+        ldblib.c
+        ldebug.c
+        ldo.c
+        ldump.c
+        lfunc.c
+        lgc.c
+        linit.c
+		#liolib.c
+        llex.c
+        lmem.c
+        loadlib.c
+        lobject.c
+        lopcodes.c
+		#loslib.c
+        lparser.c
+		#lpico8lib.c
+        lstate.c
+        lstring.c
+        lstrlib.c
+        ltable.c
+        ltablib.c
+        ltests.c
+        ltm.c
+        lundump.c
+        lvm.c
+        lzio.c
 
         fix32.h
         lapi.h
